# scopus_caller

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: mac.yml  main.yml  windows.yml
input/: keywords.csv
scopuscaller/: __init__.py  call_scopus.py  call_semanticscholar.py  test_call_scopus.py
src/: Readme.md  call_scopus.py  call_scopus_abstract.py  call_semanticscholar.py  keyword_scrapper.py  scopus_query.py  scrapper.py  test_call_scopus.py
tests/: test_call_scopus.py
