[metadata]
name = scopus_caller
version = 0.1.3
author = Vishal Mahajan
author_email = vishal.mahajan@tum.de
url = https://github.com/vishalmhjn/scopus_caller
description = This package allows the users to query its database for all the articles based on a specified keyword(s)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
zip_safe = True
include_package_data = True
install_requires =
    aiohttp
    nest_asyncio
    numpy
    pandas
    requests
    pytest
    click
    pylint
    black
    pytest-cov

[options.package_data]
example = *.txt
* = README.md